--- a/source/posts/2016/04-25-podcast-04-16.md
+++ b/source/posts/2016/04-25-podcast-04-16.md
@@ -16,7 +16,7 @@ main_image: "/images/static/04/0416.png"
 
 ## Ruby
 
- - [Changes to test controllers in Rails 5](http://blog.bigbinary.com/2016/04/19/changes-to-test-controllers-in-rails-5.html), [Rails 5 officially supports MariaDB](http://blog.bigbinary.com/2016/04/21/rails-5-official-supports-mariadb.html) и [The Road to Sinatra 2.0](http://zzak.io/log/2016-04-18-the-road-to-sinatra-2.0.html)
+ - [Ruby 2.3.1 Released](https://www.ruby-lang.org/en/news/2016/04/26/ruby-2-3-1-released/), [Changes to test controllers in Rails 5](http://blog.bigbinary.com/2016/04/19/changes-to-test-controllers-in-rails-5.html), [Rails 5 officially supports MariaDB](http://blog.bigbinary.com/2016/04/21/rails-5-official-supports-mariadb.html) и [The Road to Sinatra 2.0](http://zzak.io/log/2016-04-18-the-road-to-sinatra-2.0.html)
  - [How I hunted the most odd ruby bug](http://blog.arkency.com/2016/04/how-i-hunted-the-most-odd-ruby-bug/), [When to avoid the DRY principle](https://www.madetech.com/blog/when-to-avoid-the-dry-principle) и [6 Reasons to Choose Ruby on Rails (RoR) to Build Web Application](http://www.railscarma.com/blog/technical-articles/6-reasons-choose-ruby-rails-ror-build-web-application/)
  - [Using Webpack with Middleman](https://rossta.net/blog/using-webpack-with-middleman.html), [How to Find Ruby Code Smells with Reek](https://blog.codeship.com/how-to-find-ruby-code-smells-with-reek/) и [Thredded is a Rails 4.2+ forum/messageboard engine](https://thredded.org/)
 
