--- a/source/posts/2016/05-09-podcast-04-17.md
+++ b/source/posts/2016/05-09-podcast-04-17.md
@@ -17,9 +17,13 @@ main_image: "/images/static/04/0417.png"
 ## Ruby
 
  - [Rails 5.0.0.beta4](http://weblog.rubyonrails.org/2016/4/28/Rails-5-0-beta4/)
+ - [Rails 5 adds a way to get information about types of failed validations](http://blog.bigbinary.com/2016/05/03/rails-5-adds-a-way-to-get-information-about-types-of-failed-validations.html)
+ - [ImageMagick Is On Fire — CVE-2016–3714](https://imagetragick.com/)
  - [Improving Large Rails Apps with Service Objects](http://aaronlasseigne.com/2016/04/27/improving-large-rails-apps-with-service-objects/)
  - [No More Errors](http://idiosyncratic-ruby.com/32-no-more-errors.html)
+ - [The biggest Rails code smell you should avoid to keep your app healthy](https://medium.com/planet-arkency/the-biggest-rails-code-smell-you-should-avoid-to-keep-your-app-healthy-a61fd75ab2d3)
  - [Parsing XML: XPath vs Object](https://medium.com/@evmorov/parsing-xml-xpath-vs-object-ebbca0ba9a2d)
+ - [How to Generate Weighted Random Numbers](http://www.blackbytes.info/2016/05/weighted-random-numbers/)
 
 ## JavaScript
 
@@ -33,6 +37,7 @@ main_image: "/images/static/04/0417.png"
  - [Styleguide helps you create, share, and automate a living visual style library of your brand](http://devbridge.github.io/Styleguide/)
  - [After a year of using NodeJS in production](http://geekforbrains.com/post/after-a-year-of-nodejs-in-production)
  - [React makes me sad](https://medium.com/@tenorb/react-makes-me-sad-efc135796595)
+ - [Target="_blank" — the most underestimated vulnerability ever](https://medium.com/@jitbit/target-blank-the-most-underestimated-vulnerability-ever-96e328301f4c)
 
 
 READMORE
