--- a/source/posts/2016/05-09-podcast-04-17.md
+++ b/source/posts/2016/05-09-podcast-04-17.md
@@ -24,6 +24,9 @@ main_image: "/images/static/04/0417.png"
  - [The biggest Rails code smell you should avoid to keep your app healthy](https://medium.com/planet-arkency/the-biggest-rails-code-smell-you-should-avoid-to-keep-your-app-healthy-a61fd75ab2d3)
  - [Parsing XML: XPath vs Object](https://medium.com/@evmorov/parsing-xml-xpath-vs-object-ebbca0ba9a2d)
  - [How to Generate Weighted Random Numbers](http://www.blackbytes.info/2016/05/weighted-random-numbers/)
+ - [Bundler v1.12](http://bundler.io/v1.12/whats_new.html)
+ - [How to specify local Ruby gems in your Gemfile](https://rossta.net/blog/how-to-specify-local-ruby-gems-in-your-gemfile.html)
+ - [How Changing WebFonts Made Rubygems.org 10x Faster](https://www.nateberkopec.com/2015/11/30/how-changing-webfonts-made-rubygems-10x-faster.html)
 
 ## JavaScript
 
