--- a/source/posts/2016/05-09-podcast-04-17.md
+++ b/source/posts/2016/05-09-podcast-04-17.md
@@ -3,11 +3,11 @@ title: "17 выпуск 04 сезона. Rails 5.0.0.rc1, Node v6.1.0, ImageMagi
 date: 2016-05-09
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/152/file/podfm_rwpod_my_16_152.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.16/0416.mp3"
+audio_url: "http://rwpod.podfm.ru/my/153/file/podfm_rwpod_my_17_153.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.17/0417.mp3"
 audio_format: "audio/mpeg"
-audio_length: 44941283
-duration: "00:46:42"
+audio_length: 52409686
+duration: "00:54:29"
 small_icon: mic
 main_image: "/images/static/04/0417.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/04/0417.png"
 ## Ruby
 
  - [Rails 5.0.0.rc1](https://rubygems.org/gems/rails/versions/5.0.0.racecar1), [Rails 5 adds a way to get information about types of failed validations](http://blog.bigbinary.com/2016/05/03/rails-5-adds-a-way-to-get-information-about-types-of-failed-validations.html), [Bundler v1.12](http://bundler.io/v1.12/whats_new.html) и [ImageMagick Is On Fire — CVE-2016–3714](https://imagetragick.com/)
- - [The biggest Rails code smell you should avoid to keep your app healthy](https://medium.com/planet-arkency/the-biggest-rails-code-smell-you-should-avoid-to-keep-your-app-healthy-a61fd75ab2d3), [Improving Large Rails Apps with Service Objects](http://aaronlasseigne.com/2016/04/27/improving-large-rails-apps-with-service-objects/)
+ - [The biggest Rails code smell you should avoid to keep your app healthy](https://medium.com/planet-arkency/the-biggest-rails-code-smell-you-should-avoid-to-keep-your-app-healthy-a61fd75ab2d3) и [Improving Large Rails Apps with Service Objects](http://aaronlasseigne.com/2016/04/27/improving-large-rails-apps-with-service-objects/)
  - [How to specify local Ruby gems in your Gemfile](https://rossta.net/blog/how-to-specify-local-ruby-gems-in-your-gemfile.html), [How Changing WebFonts Made Rubygems.org 10x Faster](https://www.nateberkopec.com/2015/11/30/how-changing-webfonts-made-rubygems-10x-faster.html) и [Parsing XML: XPath vs Object](https://medium.com/@evmorov/parsing-xml-xpath-vs-object-ebbca0ba9a2d)
  - [How to Generate Weighted Random Numbers](http://www.blackbytes.info/2016/05/weighted-random-numbers/), [No More Errors](http://idiosyncratic-ruby.com/32-no-more-errors.html) и [Make Ruby Great Again](http://blog.testdouble.com/posts/2016-05-09-make-ruby-great-again.html)
 
@@ -27,6 +27,10 @@ main_image: "/images/static/04/0417.png"
  - [ES6, ES7, and beyond](http://v8project.blogspot.co.il/2016/04/es6-es7-and-beyond.html) и [Turbocharged JavaScript refactoring with codemods](https://medium.com/airbnb-engineering/turbocharged-javascript-refactoring-with-codemods-b0cae8b326b9)
  - [Curated tutorial and resource links I've collected on React, Redux, ES6](https://github.com/markerikson/react-redux-links), [React-Compose](http://reactcompose.com/) и [React makes me sad](https://medium.com/@tenorb/react-makes-me-sad-efc135796595)
  - [Algebrite is a Javascript library for symbolic mathematics](http://algebrite.org/), [Grafi.js is a library intended for learning about how image processing works](http://grafijs.org/), [Styleguide helps you create, share, and automate a living visual style library of your brand](http://devbridge.github.io/Styleguide/) и [DOM Features You Didn’t Know Existed (Video & Slides)](http://www.impressivewebs.com/dom-features-you-didnt-know-existed-video-slides/)
+
+## Конференции
+
+ - [Ruby Meditation 9](http://www.eventbrite.com/e/ruby-meditation-9-tickets-24841879731)
 
 
 READMORE
