--- a/source/posts/2016/05-16-podcast-04-18.md
+++ b/source/posts/2016/05-16-podcast-04-18.md
@@ -16,7 +16,7 @@ main_image: "/images/static/04/0418.png"
 
 ## Ruby
 
- - [Today I accept that Rails is yesterday’s software](https://medium.com/@deathdisco/today-i-accept-that-rails-is-yesterday-s-software-b5af35c9af39), [It Takes All Kinds](http://www.codethinked.com/it-takes-all-kinds), [Rails 5 supports bi-directional destroy dependency](http://blog.bigbinary.com/2016/05/12/Rails-5-supports-bi-directional-destroy-dependency.html), [Rails 5 allows updating a record without updating timestamps](http://blog.bigbinary.com/2016/05/09/rails-5-allows-updating-without-updating-timestamps.html) и [My notes from RailsConf 2016](http://blog.iempire.ru/2016/05/09/railsconf-2016/)
+ - [Today I accept that Rails is yesterday’s software](https://medium.com/@deathdisco/today-i-accept-that-rails-is-yesterday-s-software-b5af35c9af39), [It Takes All Kinds](http://www.codethinked.com/it-takes-all-kinds), [Rails 5 supports bi-directional destroy dependency](http://blog.bigbinary.com/2016/05/12/Rails-5-supports-bi-directional-destroy-dependency.html), [Rails 5 allows updating a record without updating timestamps](http://blog.bigbinary.com/2016/05/09/rails-5-allows-updating-without-updating-timestamps.html), [Rails 5 accepts 1 or true for acceptance validation](http://blog.bigbinary.com/2016/05/13/rails-5-accepts-1-or-true-for-acceptance-validation.html) и [My notes from RailsConf 2016](http://blog.iempire.ru/2016/05/09/railsconf-2016/)
  - [Routing HTTP requests with Nginx+Mruby](http://hokstadconsulting.com/nginx/mruby-virtualhosts), [Introducing Helix: Rust + Ruby, Without The Glue](http://blog.skylight.io/introducing-helix/) и [Writing Ruby gem in Rust](http://undefined-reference.org/2016/05/14/writing-rubygem-in-rust.html)
  - [Use React Today in Ruby by Heading to Cuba](http://www.sitepoint.com/use-react-today-in-ruby-by-heading-to-cuba/), [MiniRacer - minimal, modern embedded V8 for Ruby](https://github.com/discourse/mini_racer), [Active Record Doctor helps to keep the database in a good shape](https://github.com/gregnavis/active_record_doctor) и [Telegram::Bot](https://github.com/telegram-bot-rb/telegram-bot)
 
