--- a/source/posts/2016/05-16-podcast-04-18.md
+++ b/source/posts/2016/05-16-podcast-04-18.md
@@ -22,7 +22,7 @@ main_image: "/images/static/04/0418.png"
 
 ## JavaScript
 
- - [Electron 1.0](http://electron.atom.io/blog/2016/05/11/electron-1-0) и [NW.js & Electron Compared (2016 Edition)](http://tangiblejs.com/posts/nw-js-and-electron-compared-2016-edition)
+ - [Electron 1.0](http://electron.atom.io/blog/2016/05/11/electron-1-0), [NW.js & Electron Compared (2016 Edition)](http://tangiblejs.com/posts/nw-js-and-electron-compared-2016-edition) и [Bozon](https://github.com/railsware/bozon)
  - [The Three Big Lies About JavaScript](https://medium.com/javascript-non-grata/the-three-big-lies-about-javascript-e227cabe3beb), [12 Extremely Useful Hacks for JavaScript](https://blog.jscrambler.com/12-extremely-useful-hacks-for-javascript/), [A Look at ES6 Sets](http://www.barbarianmeetscoding.com/blog/2016/05/12/a-look-at-es6-sets/) и [So you want to make a PostCSS plugin](https://css-tricks.com/want-make-postcss-plugin/)
  - [Talisman - a straightforward & modular NLP, machine learning & fuzzy matching library for JavaScript](https://yomguithereal.github.io/talisman/), [JavaPoly.js is a library that polyfills native JVM support in the browser](https://www.javapoly.com/), [HTML5 Accessibility](http://stevefaulkner.github.io/HTML5accessibility/) и [Why did you update? - a function that monkey patches React and notifies you in the console when potentially unnecessary re-renders occur](https://github.com/garbles/why-did-you-update)
 
