--- a/source/posts/2016/05-23-podcast-04-19.md
+++ b/source/posts/2016/05-23-podcast-04-19.md
@@ -22,6 +22,8 @@ main_image: "/images/static/04/0419.png"
 
 ## JavaScript
 
+ - [The 10 biggest announcements from Google I/O 2016](http://www.theverge.com/2016/5/18/11701030/google-io-2016-keynote-highlights-announcements-recap)
+ - [Firebase 2.0](https://firebase.google.com/)
  - [Horizon is a realtime, open-source backend for JavaScript apps](http://horizon.io/)
  - [5 Easy Steps to Understanding JSON Web Tokens (JWT)](https://medium.com/vandium-software/5-easy-steps-to-understanding-json-web-tokens-jwt-1164c0adfcec)
 
