--- a/source/posts/2016/05-23-podcast-04-19.md
+++ b/source/posts/2016/05-23-podcast-04-19.md
@@ -19,6 +19,8 @@ main_image: "/images/static/04/0419.png"
  - [Rails 5 supports configuring Active Job backend adapter for each job](http://blog.bigbinary.com/2016/05/15/rails-5-allows-to-inherit-activejob-queue-adapter.html)
  - [Ruby has been fast enough for 13 years](https://m.signalvnoise.com/ruby-has-been-fast-enough-for-13-years-afff4a54abc7)
  - [Rails 5 — ActiveRecord Suppress — a step too far?](https://medium.com/spritle-software/rails-5-activerecord-suppress-a-step-too-far-d7ec2e4ed027)
+ - [Type Wars](http://blog.cleancoder.com/uncle-bob/2016/05/01/TypeWars.html)
+ - [The promise of static typing](http://labs.ig.com/static-typing-promise)
 
 ## JavaScript
 
