--- a/source/posts/2016/05-23-podcast-04-19.md
+++ b/source/posts/2016/05-23-podcast-04-19.md
@@ -28,6 +28,7 @@ main_image: "/images/static/04/0419.png"
  - [Firebase 2.0](https://firebase.google.com/)
  - [Horizon is a realtime, open-source backend for JavaScript apps](http://horizon.io/)
  - [5 Easy Steps to Understanding JSON Web Tokens (JWT)](https://medium.com/vandium-software/5-easy-steps-to-understanding-json-web-tokens-jwt-1164c0adfcec)
+ - [The Importance of !important: Forcing Immutability in CSS](http://csswizardry.com/2016/05/the-importance-of-important/)
 
 READMORE
 
