--- a/source/posts/2016/05-23-podcast-04-19.md
+++ b/source/posts/2016/05-23-podcast-04-19.md
@@ -17,18 +17,25 @@ main_image: "/images/static/04/0419.png"
 ## Ruby
 
  - [Rails 5 supports configuring Active Job backend adapter for each job](http://blog.bigbinary.com/2016/05/15/rails-5-allows-to-inherit-activejob-queue-adapter.html)
+ - [Rails 5 adds a hidden field on collection radio buttons](http://blog.bigbinary.com/2016/05/18/rails-5-add-a-hidden-field-on-collection-radio-buttons.html)
  - [Ruby has been fast enough for 13 years](https://m.signalvnoise.com/ruby-has-been-fast-enough-for-13-years-afff4a54abc7)
  - [Rails 5 — ActiveRecord Suppress — a step too far?](https://medium.com/spritle-software/rails-5-activerecord-suppress-a-step-too-far-d7ec2e4ed027)
  - [Type Wars](http://blog.cleancoder.com/uncle-bob/2016/05/01/TypeWars.html)
  - [The promise of static typing](http://labs.ig.com/static-typing-promise)
+ - [My time with Rails is up](http://solnic.eu/2016/05/22/my-time-with-rails-is-up.html)
+ - [A bit about decorators and presenters](http://eftimov.net/decorators-and-presenters)
+ - [An Introduction to Using JWT Authentication in Rails](https://www.sitepoint.com/introduction-to-using-jwt-in-rails/)
+ - [Rubygems.org: Simplifying our stack](http://blog.rubygems.org/2016/05/19/simplifying-our-stack.html)
 
 ## JavaScript
 
  - [The 10 biggest announcements from Google I/O 2016](http://www.theverge.com/2016/5/18/11701030/google-io-2016-keynote-highlights-announcements-recap)
  - [Firebase 2.0](https://firebase.google.com/)
+ - [Refactoring a javascript video store](http://martinfowler.com/articles/refactoring-video-store-js/)
  - [Horizon is a realtime, open-source backend for JavaScript apps](http://horizon.io/)
  - [5 Easy Steps to Understanding JSON Web Tokens (JWT)](https://medium.com/vandium-software/5-easy-steps-to-understanding-json-web-tokens-jwt-1164c0adfcec)
  - [The Importance of !important: Forcing Immutability in CSS](http://csswizardry.com/2016/05/the-importance-of-important/)
+ - [NativeBase - the missing piece of React Native](http://nativebase.io/)
 
 READMORE
 
