--- a/source/posts/2016/05-30-podcast-04-20.md
+++ b/source/posts/2016/05-30-podcast-04-20.md
@@ -16,8 +16,10 @@ main_image: "/images/static/04/0420.png"
 
 ## Ruby
 
+ - [A Detailed Look at Rails 5 Features and Changes](http://www.railscarma.com/blog/technical-articles/a-detailed-look-rails-5-features-changes/)
  - [Rails 5 adds ArrayInquirer and provides friendlier way to check contents in an array](http://blog.bigbinary.com/2016/05/27/rails-5-introduces-active-support-array-inquirer.html)
  - [Rails 5 renamed transactional fixtures to transactional tests](http://blog.bigbinary.com/2016/05/26/rails-5-renamed-transactional-fixtures-to-transactional-tests.html)
+ - [Rails has won: The Elephant in the Room](http://www.akitaonrails.com/2016/05/23/rails-has-won-the-elephant-in-the-room)
  - [4 ways to filter has_many associations](http://ducktypelabs.com/four-ways-to-filter-has_many-associations/)
  - [How To Implement Simple Authentication Without Devise](http://www.rubypigeon.com/posts/how-to-implement-simple-authentication-without-devise/)
  - [Sidekiq for Crystal](http://www.mikeperham.com/2016/05/25/sidekiq-for-crystal/)
