--- a/source/posts/2016/05-30-podcast-04-20.md
+++ b/source/posts/2016/05-30-podcast-04-20.md
@@ -1,5 +1,5 @@
 ---
-title: "20 выпуск 04 сезона.  и прочее"
+title: "20 выпуск 04 сезона. Rails 5 Features and Changes, Rails has won, MIND Patterns, Stylelint, Pepperoni, Ally.js и прочее"
 date: 2016-05-30
 tags:
  - podcasts
@@ -16,26 +16,16 @@ main_image: "/images/static/04/0420.png"
 
 ## Ruby
 
- - [A Detailed Look at Rails 5 Features and Changes](http://www.railscarma.com/blog/technical-articles/a-detailed-look-rails-5-features-changes/)
- - [Rails 5 adds ArrayInquirer and provides friendlier way to check contents in an array](http://blog.bigbinary.com/2016/05/27/rails-5-introduces-active-support-array-inquirer.html)
- - [Rails 5 renamed transactional fixtures to transactional tests](http://blog.bigbinary.com/2016/05/26/rails-5-renamed-transactional-fixtures-to-transactional-tests.html)
- - [Rails has won: The Elephant in the Room](http://www.akitaonrails.com/2016/05/23/rails-has-won-the-elephant-in-the-room)
- - [4 ways to filter has_many associations](http://ducktypelabs.com/four-ways-to-filter-has_many-associations/)
- - [How To Implement Simple Authentication Without Devise](http://www.rubypigeon.com/posts/how-to-implement-simple-authentication-without-devise/)
- - [Sidekiq for Crystal](http://www.mikeperham.com/2016/05/25/sidekiq-for-crystal/)
- - [Know Ruby: with_index](http://aaronlasseigne.com/2016/05/24/know-ruby-with_index/)
- - [Reactive Ruby: Building Real-time Apps with JRuby and Ratpack](https://blog.heroku.com/archives/2016/5/24/reactive_ruby_building_real_time_apps_with_jruby_and_ratpack)
+ - [A Detailed Look at Rails 5 Features and Changes](http://www.railscarma.com/blog/technical-articles/a-detailed-look-rails-5-features-changes/), [Rails 5 adds ArrayInquirer and provides friendlier way to check contents in an array](http://blog.bigbinary.com/2016/05/27/rails-5-introduces-active-support-array-inquirer.html), [Rails 5 renamed transactional fixtures to transactional tests](http://blog.bigbinary.com/2016/05/26/rails-5-renamed-transactional-fixtures-to-transactional-tests.html) и [Rails has won: The Elephant in the Room](http://www.akitaonrails.com/2016/05/23/rails-has-won-the-elephant-in-the-room)
+ - [How To Implement Simple Authentication Without Devise](http://www.rubypigeon.com/posts/how-to-implement-simple-authentication-without-devise/), [4 ways to filter has_many associations](http://ducktypelabs.com/four-ways-to-filter-has_many-associations/) и [Know Ruby: with_index](http://aaronlasseigne.com/2016/05/24/know-ruby-with_index/)
+ - [Sidekiq for Crystal](http://www.mikeperham.com/2016/05/25/sidekiq-for-crystal/), [Reactive Ruby: Building Real-time Apps with JRuby and Ratpack](https://blog.heroku.com/archives/2016/5/24/reactive_ruby_building_real_time_apps_with_jruby_and_ratpack) и [TimeMath2 - a small, no-dependencies library attempting to make time arithmetics easier](https://github.com/zverok/time_math2)
 
 
 ## JavaScript
 
- - [Pepperoni - React Native App Starter Kit for Android and iOS](http://getpepperoni.com/)
- - [Getting Started with TDD in React](https://semaphoreci.com/community/tutorials/getting-started-with-tdd-in-react)
- - [4 Reasons you should try out GraphQL today](https://medium.freecodecamp.com/introduction-to-graphql-1d8011b80159#.o9z7b69fe)
- - [Building SVG Maps with React](https://blog.komand.com/building-svg-maps-with-react)
- - [WebGazer.js is an eye tracking library](http://webgazer.cs.brown.edu/)
- - [Bideo.js - a JS library that makes it super easy to add fullscreen background videos](https://rishabhp.github.io/bideo.js/)
- - [Replicator - an advanced JavaScript objects serialization](https://github.com/inikulin/replicator)
+ - [MIND Patterns - Accessibility Patterns for the Web](https://ebay.gitbooks.io/mindpatterns/content/), [Stylelint: The Style Sheet Linter We’ve Always Wanted](https://www.smashingmagazine.com/2016/05/stylelint-the-style-sheet-linter-weve-always-wanted/), [Family.scss - a set of smart Sass mixins which will help you to manage the style of :nth-child elements](http://lukyvj.github.io/family.scss/) и [Service Workers 101](https://github.com/delapuente/service-workers-101/)
+ - [React Tutorial: Cloning Yelp](https://www.fullstackreact.com/articles/react-tutorial-cloning-yelp/), [Getting Started with TDD in React](https://semaphoreci.com/community/tutorials/getting-started-with-tdd-in-react), [Pepperoni - React Native App Starter Kit for Android and iOS](http://getpepperoni.com/), [4 Reasons you should try out GraphQL today](https://medium.freecodecamp.com/introduction-to-graphql-1d8011b80159#.o9z7b69fe) и [Building SVG Maps with React](https://blog.komand.com/building-svg-maps-with-react)
+ - [Ally.js - a JavaScript library simplifying certain accessibility features, functions and behaviors](http://allyjs.io/), [WebGazer.js is an eye tracking library](http://webgazer.cs.brown.edu/), [Bideo.js - a JS library that makes it super easy to add fullscreen background videos](https://rishabhp.github.io/bideo.js/) и [Replicator - an advanced JavaScript objects serialization](https://github.com/inikulin/replicator)
 
 READMORE
 
