--- a/source/posts/2016/05-31-podcast-04-20.md
+++ b/source/posts/2016/05-31-podcast-04-20.md
@@ -1,13 +1,13 @@
 ---
 title: "20 выпуск 04 сезона. Rails 5 Features and Changes, Rails has won, MIND Patterns, Stylelint, Pepperoni, Microlight.js и прочее"
-date: 2016-05-30
+date: 2016-05-31
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/155/file/podfm_rwpod_my_19_155.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.19/0419.mp3"
+audio_url: "http://rwpod.podfm.ru/my/156/file/podfm_rwpod_my_20_156.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.20/0420.mp3"
 audio_format: "audio/mpeg"
-audio_length: 58845470
-duration: "01:01:11"
+audio_length: 53104161
+duration: "00:55:12"
 small_icon: mic
 main_image: "/images/static/04/0420.png"
 ---
@@ -26,6 +26,10 @@ main_image: "/images/static/04/0420.png"
  - [MIND Patterns - Accessibility Patterns for the Web](https://ebay.gitbooks.io/mindpatterns/content/), [Stylelint: The Style Sheet Linter We’ve Always Wanted](https://www.smashingmagazine.com/2016/05/stylelint-the-style-sheet-linter-weve-always-wanted/), [Family.scss - a set of smart Sass mixins which will help you to manage the style of :nth-child elements](http://lukyvj.github.io/family.scss/) и [Service Workers 101](https://github.com/delapuente/service-workers-101/)
  - [React Tutorial: Cloning Yelp](https://www.fullstackreact.com/articles/react-tutorial-cloning-yelp/), [Getting Started with TDD in React](https://semaphoreci.com/community/tutorials/getting-started-with-tdd-in-react) и [Pepperoni - React Native App Starter Kit for Android and iOS](http://getpepperoni.com/)
  - [Microlight.js is a micro-library which improves readability of code snippets by highlighting](http://asvd.github.io/microlight/), [WebGazer.js is an eye tracking library](http://webgazer.cs.brown.edu/), [Bideo.js - a JS library that makes it super easy to add fullscreen background videos](https://rishabhp.github.io/bideo.js/) и [Replicator - an advanced JavaScript objects serialization](https://github.com/inikulin/replicator)
+
+## Скринкаст
+
+ - [Service Worker и Application Cache](https://www.youtube.com/watch?v=b-KM44kqgxs)
 
 READMORE
 
