--- a/source/posts/2016/06-05-podcast-04-21.md
+++ b/source/posts/2016/06-05-podcast-04-21.md
@@ -21,6 +21,7 @@ main_image: "/images/static/04/0421.png"
 
 ## JavaScript
 
+ - [Test how mobile-friendly your site is](https://testmysite.thinkwithgoogle.com/)
 
 
 READMORE
