--- a/source/posts/2016/06-05-podcast-04-21.md
+++ b/source/posts/2016/06-05-podcast-04-21.md
@@ -16,7 +16,9 @@ main_image: "/images/static/04/0421.png"
 
 ## Ruby
 
+ - [Rails 5 introduces country_zones helper method to ActiveSupport::TimeZone](http://blog.bigbinary.com/2016/06/01/rails-5-introduces-helpers-for-country-zones.html)
  - [Flirting with Crystal, a Rubyist Perspective](http://www.akitaonrails.com/2016/05/31/flirting-with-crystal-a-rubyist-perspective)
+ - [A comprehensive guide to interacting with IMAP using Ruby](http://www.ombulabs.com/blog/ruby/imap/a-comprehensive-guide-to-interacting-with-imap-using-ruby.html)
 
 
 ## JavaScript
