--- a/source/posts/2016/06-05-podcast-04-21.md
+++ b/source/posts/2016/06-05-podcast-04-21.md
@@ -19,11 +19,15 @@ main_image: "/images/static/04/0421.png"
  - [Rails 5 introduces country_zones helper method to ActiveSupport::TimeZone](http://blog.bigbinary.com/2016/06/01/rails-5-introduces-helpers-for-country-zones.html)
  - [Flirting with Crystal, a Rubyist Perspective](http://www.akitaonrails.com/2016/05/31/flirting-with-crystal-a-rubyist-perspective)
  - [A comprehensive guide to interacting with IMAP using Ruby](http://www.ombulabs.com/blog/ruby/imap/a-comprehensive-guide-to-interacting-with-imap-using-ruby.html)
+ - [4 Ways To Avoid Monkey Patching](http://www.rubypigeon.com/posts/4-ways-to-avoid-monkey-patching/)
 
 
 ## JavaScript
 
  - [Test how mobile-friendly your site is](https://testmysite.thinkwithgoogle.com/)
+ - [Drape - a fabric design and simulation tool, built in three.js](http://aatishb.github.io/drape/)
+ - [How to write your own Virtual DOM](https://medium.com/@deathmood/how-to-write-your-own-virtual-dom-ee74acc13060)
+ - [Building React Applications with Idiomatic Redux](https://egghead.io/courses/building-react-applications-with-idiomatic-redux)
 
 
 READMORE
