--- a/source/posts/2016/06-05-podcast-04-21.md
+++ b/source/posts/2016/06-05-podcast-04-21.md
@@ -20,6 +20,7 @@ main_image: "/images/static/04/0421.png"
  - [Flirting with Crystal, a Rubyist Perspective](http://www.akitaonrails.com/2016/05/31/flirting-with-crystal-a-rubyist-perspective)
  - [A comprehensive guide to interacting with IMAP using Ruby](http://www.ombulabs.com/blog/ruby/imap/a-comprehensive-guide-to-interacting-with-imap-using-ruby.html)
  - [4 Ways To Avoid Monkey Patching](http://www.rubypigeon.com/posts/4-ways-to-avoid-monkey-patching/)
+ - [10 Ways to Secure a Ruby on Rails Website](https://www.ziptask.com/10-Ways-to-Secure-a-Ruby-on-Rails-Website)
 
 
 ## JavaScript
