--- a/source/posts/2016/06-14-podcast-04-22.md
+++ b/source/posts/2016/06-14-podcast-04-22.md
@@ -24,6 +24,7 @@ main_image: "/images/static/04/0422.png"
 
 ## JavaScript
 
+ - [jQuery 3.0 Final Released](http://blog.jquery.com/2016/06/09/jquery-3-0-final-released/)
  - [Sabertooth - a Javascript Library for interacting with Bluetooth Low Energy Devices](https://sabertooth-io.github.io/)
 
 
