--- a/source/posts/2016/06-14-podcast-04-22.md
+++ b/source/posts/2016/06-14-podcast-04-22.md
@@ -20,6 +20,7 @@ main_image: "/images/static/04/0422.png"
  - [Duck-typing with #to_proc](http://jbodah.github.io/blog/2016/06/09/ducktyping-toproc/)
  - [How To Keep Your Controllers Thin with Form Objects](http://ducktypelabs.com/how-to-keep-your-controllers-thin-with-form-objects/)
  - [The Penguin That Can't Fly](https://lucaguidi.com/2016/06/07/the-penguin-that-cannot-fly.html)
+ - [FasterPath - improve performance in the most heavily used areas of Ruby](https://github.com/danielpclark/faster_path)
 
 
 ## JavaScript
