--- a/source/posts/2016/06-21-podcast-04-23.html.md
+++ b/source/posts/2016/06-21-podcast-04-23.html.md
@@ -38,6 +38,10 @@ main_image: "/images/static/04/0423.png"
  - [Kakapo.js - next generation mocking framework in Javascript](http://devlucky.github.io/kakapo-js)
  - [AOS - Animate On Scroll Library](http://michalsnik.github.io/aos/)
 
+## Conferences
+
+ - [10th Anniversary Ruby Meditation Conference](https://rubymeditation10.eventbrite.com/)
+
 
 READMORE
 
