--- a/source/posts/2016/06-21-podcast-04-23.html.md
+++ b/source/posts/2016/06-21-podcast-04-23.html.md
@@ -1,5 +1,5 @@
 ---
-title: "23 выпуск 04 сезона.  и прочее"
+title: "23 выпуск 04 сезона. Elixir over Ruby, PostgreSQL Exercises, Headless Chrome, Kakapo.js, AOS и прочее"
 date: 2016-06-21
 tags:
  - podcasts
@@ -16,27 +16,16 @@ main_image: "/images/static/04/0423.png"
 
 ## Ruby
 
- - [Exceptions and Observers](https://killring.org/2016/06/12/exceptions-and-observers/)
- - [Rails 5 prevents destructive action on production database](http://blog.bigbinary.com/2016/06/07/rails-5-prevents-destructive-action-on-production-db.html)
- - [Rails 5 allows to update records in AR Relation with callbacks and validations](http://blog.bigbinary.com/2016/06/10/rails-5-allows-updating-relation-objects-along-with-callbacks-and-validations.html)
- - [Rails 5 adds another base class Application Job for jobs](http://blog.bigbinary.com/2016/06/12/rails-5-adds-application-jobs-for-jobs.html)
- - [Rails 5 allows UUID as column type in create_join_table](http://blog.bigbinary.com/2016/06/16/rails-5-create-join-table-with-uuid.html)
- - [Metaprogramming in Ruby](https://blog.codeship.com/metaprogramming-in-ruby/)
- - [How we've cut our development time in half by losing Rails](http://mixandgo.com/blog/how-weve-cut-our-development-time-in-half-by-losing-rails)
- - [How to efficiently process large Excel files using Ruby](https://infinum.co/the-capsized-eight/articles/how-to-efficiently-process-large-excel-files-using-ruby)
- - [A Six-Pronged Rails Performance Philosophy](http://blog.scoutapp.com/articles/2016/06/14/performance-prereqs-for-rails-teams)
- - [PostgreSQL Exercises](https://pgexercises.com/)
+ - [Rails 5 prevents destructive action on production database](http://blog.bigbinary.com/2016/06/07/rails-5-prevents-destructive-action-on-production-db.html), [Rails 5 allows to update records in AR Relation with callbacks and validations](http://blog.bigbinary.com/2016/06/10/rails-5-allows-updating-relation-objects-along-with-callbacks-and-validations.html), [Rails 5 adds another base class Application Job for jobs](http://blog.bigbinary.com/2016/06/12/rails-5-adds-application-jobs-for-jobs.html) и [Rails 5 allows UUID as column type in create_join_table](http://blog.bigbinary.com/2016/06/16/rails-5-create-join-table-with-uuid.html)
+ - [When to choose Elixir over Ruby for 2016 projects?](https://www.amberbit.com/blog/2015/12/22/when-choose-elixir-over-ruby-for-2016-projects/), [How we've cut our development time in half by losing Rails](http://mixandgo.com/blog/how-weve-cut-our-development-time-in-half-by-losing-rails) и [PostgreSQL Exercises](https://pgexercises.com/)
+ - [A Six-Pronged Rails Performance Philosophy](http://blog.scoutapp.com/articles/2016/06/14/performance-prereqs-for-rails-teams), [How to efficiently process large Excel files using Ruby](https://infinum.co/the-capsized-eight/articles/how-to-efficiently-process-large-excel-files-using-ruby) и [Metaprogramming in Ruby](https://blog.codeship.com/metaprogramming-in-ruby/)
 
 
 ## JavaScript
 
- - [Angular 2 RC2](http://angularjs.blogspot.com/2016/06/rc2-now-available.html)
- - [ECMAScript 2016 Approved](http://www.ecma-international.org/ecma-262/7.0/index.html)
- - [Getting Started with JavaScript Robotics](https://medium.com/@leo/getting-started-with-javascript-robotics-5c54e716562c)
- - [Gentle explanation of 'this' keyword in JavaScript](http://rainsoft.io/gentle-explanation-of-this-in-javascript/)
- - [Learn D3.js Basics By Planting A Vegetable Garden](https://www.rtfmanual.io/d3garden/)
- - [Kakapo.js - next generation mocking framework in Javascript](http://devlucky.github.io/kakapo-js)
- - [AOS - Animate On Scroll Library](http://michalsnik.github.io/aos/)
+ - [Angular 2 RC2](http://angularjs.blogspot.com/2016/06/rc2-now-available.html), [Headless Chrome](https://docs.google.com/presentation/d/1gqK9F4lGAY3TZudAtdcxzMQNEE7PcuQrGu83No3l0lw/preview?slide=id.g14ebf0ab58_0_0) и [ECMAScript 2016 Approved](http://www.ecma-international.org/ecma-262/7.0/index.html)
+ - [One does not simply learn to code](https://medium.freecodecamp.com/one-does-not-simply-learn-to-code-f25bacdc5b62), [History and Background of JavaScript Module Loaders](http://appendto.com/2016/06/the-short-history-of-javascript-module-loaders/) и [Gentle explanation of 'this' keyword in JavaScript](http://rainsoft.io/gentle-explanation-of-this-in-javascript/)
+ - [Getting Started with JavaScript Robotics](https://medium.com/@leo/getting-started-with-javascript-robotics-5c54e716562c),  [Google Fonts website gets a major redesign](http://www.creativebloq.com/fonts/google-fonts-website-gets-redesign-61620894), [Learn D3.js Basics By Planting A Vegetable Garden](https://www.rtfmanual.io/d3garden/), [Kakapo.js - next generation mocking framework in Javascript](http://devlucky.github.io/kakapo-js) и [AOS - Animate On Scroll Library](http://michalsnik.github.io/aos/)
 
 ## Conferences
 
