--- a/source/posts/2016/07-05-podcast-04-25.html.md
+++ b/source/posts/2016/07-05-podcast-04-25.html.md
@@ -1,5 +1,5 @@
 ---
-title: "25 выпуск 04 сезона. и прочее"
+title: "25 выпуск 04 сезона. Rails 5.0, RSpec 3.5, ESLint 3.0.0, D3 4.1.0, Unused, Null pointer exceptions hell и прочее"
 date: 2016-07-05
 tags:
  - podcasts
@@ -22,9 +22,9 @@ main_image: "/images/static/04/0425.png"
 
 ## JavaScript
 
- - [ESLint v3.0.0 released](http://eslint.org/blog/2016/07/eslint-v3.0.0-released) и [D3 v4.1.0](https://github.com/d3/d3/releases/tag/v4.1.0)
- - [Communicating Between JavaScript and CSS Using CSS Variables](https://eager.io/blog/communicating-between-javascript-and-css-with-css-variables/) и [Null pointer exceptions hell](http://dobegin.com/npe-hell/)
- - [Atmo - Server Side Api Mocking made easy with UI](https://github.com/Raathigesh/Atmo)
+ - [ESLint v3.0.0 released](http://eslint.org/blog/2016/07/eslint-v3.0.0-released), [D3 v4.1.0](https://github.com/d3/d3/releases/tag/v4.1.0) и [Null pointer exceptions hell](http://dobegin.com/npe-hell/)
+ - [Battle of the architectures](https://medium.com/@marianojmiguel/battle-of-the-architectures-30c512d542a4), [Communicating Between JavaScript and CSS Using CSS Variables](https://eager.io/blog/communicating-between-javascript-and-css-with-css-variables/) и [Three Real-World Uses for Mutation Observer](https://eager.io/blog/three-real-world-use-cases-for-mutation-observer/)
+ - [Atmo - Server Side Api Mocking made easy with UI](https://github.com/Raathigesh/Atmo), [Anime - a flexible yet lightweight JavaScript animation library](http://anime-js.com/) и [Vidage - a solution to full-screen background video and image combined](https://dvlden.github.io/Vidage/)
 
 
 READMORE
