--- a/source/posts/2016/07-12-podcast-04-26.html.md
+++ b/source/posts/2016/07-12-podcast-04-26.html.md
@@ -16,7 +16,7 @@ main_image: "/images/static/04/0426.png"
 
 ## Ruby
 
- - [ActionCable under stress: fixing data corruption and socket leak issues in Rails 5](https://blog.phusion.nl/2016/07/07/actioncable-under-stress-p1/), [Errors can be indexed with nested attributes in Rails 5](http://blog.bigbinary.com/2016/07/07/errors-can-be-indexed-with-nested-attrbutes-in-rails-5.html) и [Trumpify - make ruby great again](https://github.com/rickr/trumpify)
+ - [ActionCable under stress: fixing data corruption and socket leak issues in Rails 5](https://blog.phusion.nl/2016/07/07/actioncable-under-stress-p1/), [Errors can be indexed with nested attributes in Rails 5](http://blog.bigbinary.com/2016/07/07/errors-can-be-indexed-with-nested-attrbutes-in-rails-5.html), [Ruby or Rails? quiz](http://railshurts.com/quiz/) и [Trumpify - make ruby great again](https://github.com/rickr/trumpify)
  - [Playing with symmetric encryption algorithms in Ruby](https://medium.com/@Bakku1505/playing-with-symmetric-encryption-algorithms-in-ruby-8652f105341e), [Schemaless Models With Hash Fields or JSONB](https://apotonick.wordpress.com/2016/07/06/schemaless-models-with-hash-fields-or-jsonb/) и [5 Tips for Writing a Legible Regexp](http://aaronlasseigne.com/2016/07/08/5-tips-for-writing-a-legible-regexp/)
  - [How to Deploy Software](https://zachholman.com/posts/deploying-software), [Go’s march to low-latency GC](https://blog.twitch.tv/gos-march-to-low-latency-gc-a6fa96f06eb7) и [Original Apollo 11 Guidance Computer (AGC) source code](https://github.com/chrislgarry/Apollo-11)
 
