--- a/source/posts/2016/07-19-podcast-04-27.html.md
+++ b/source/posts/2016/07-19-podcast-04-27.html.md
@@ -22,7 +22,7 @@ main_image: "/images/static/04/0427.png"
 ## JavaScript
 
  - [Announcing TypeScript 2.0 Beta](https://blogs.msdn.microsoft.com/typescript/2016/07/11/announcing-typescript-2-0-beta/), [Serverless Data Sync in Web Apps with Bit Torrent](https://paul.kinlan.me/serverless-sync-in-web-apps/) и [Imperative vs Declarative Programming](https://medium.freecodecamp.com/imperative-vs-declarative-programming-283e96bf8aea)
- - [Mixins Considered Harmful](https://facebook.github.io/react/blog/2016/07/13/mixins-considered-harmful.html) и [Things I wish I knew about Redux](https://medium.com/horrible-hacks/things-i-wish-i-knew-about-redux-9924abf2f9e0) и [Cleave.js - format input text content automatically](http://nosir.github.io/cleave.js/)
+ - [Mixins Considered Harmful](https://facebook.github.io/react/blog/2016/07/13/mixins-considered-harmful.html), [Things I wish I knew about Redux](https://medium.com/horrible-hacks/things-i-wish-i-knew-about-redux-9924abf2f9e0) и [Cleave.js - format input text content automatically](http://nosir.github.io/cleave.js/)
 
 
 READMORE
