--- a/source/posts/2016/07-19-podcast-04-27.html.md
+++ b/source/posts/2016/07-19-podcast-04-27.html.md
@@ -17,7 +17,7 @@ main_image: "/images/static/04/0427.png"
 ## Ruby
 
  - [Partial template name need not be a valid Ruby identifier in Rails 5](http://blog.bigbinary.com/2016/07/14/rails-5-partial-template-name-need-not-be-a-valid-ruby-identifier.html), [How We Replaced React with Phoenix](https://robots.thoughtbot.com/how-we-replaced-react-with-phoenix) и [Why You Shouldn’t Roll Your Own Authentication](https://blog.codeship.com/why-you-shouldnt-roll-your-own-authentication/)
- - [Multi-model searching using Elasticsearch vol. 2](http://blog.ragnarson.com/2016/07/14/multi-model-searching-elasticsearch-2.html) и [Faster PostgreSQL Searches with Trigrams](http://blog.scoutapp.com/articles/2016/07/12/how-to-make-text-searches-in-postgresql-faster-with-trigram-similarity) и [Scaling Up Rails Applications With PostgreSQL Table Partitioning - Part 3](https://karolgalanciak.com/blog/2016/07/10/scaling-up-rails-applications-with-postgresql-table-partitioning-part-3/)
+ - [Multi-model searching using Elasticsearch vol. 2](http://blog.ragnarson.com/2016/07/14/multi-model-searching-elasticsearch-2.html), [Faster PostgreSQL Searches with Trigrams](http://blog.scoutapp.com/articles/2016/07/12/how-to-make-text-searches-in-postgresql-faster-with-trigram-similarity) и [Scaling Up Rails Applications With PostgreSQL Table Partitioning - Part 3](https://karolgalanciak.com/blog/2016/07/10/scaling-up-rails-applications-with-postgresql-table-partitioning-part-3/)
 
 ## JavaScript
 
