--- a/source/posts/2016/07-26-podcast-04-28.html.md
+++ b/source/posts/2016/07-26-podcast-04-28.html.md
@@ -17,6 +17,7 @@ main_image: "/images/static/04/0428.png"
 ## Ruby
 
  - [New Features in Ruby 2.4](https://blog.blockscore.com/new-features-in-ruby-2-4/)
+ - [Python and Ruby implementations compared by the error density](http://www.viva64.com/en/b/0414/) ([русский перевод](https://habrahabr.ru/company/pvs-studio/blog/306204/))
 
 ## JavaScript
 
