--- a/source/posts/2016/07-26-podcast-04-28.html.md
+++ b/source/posts/2016/07-26-podcast-04-28.html.md
@@ -16,14 +16,28 @@ main_image: "/images/static/04/0428.png"
 
 ## Ruby
 
+ - [Rails 5 fixes ambiguous column issue for projected fields in group by query](http://blog.bigbinary.com/2016/07/21/rails-5-fixes-ambiguous-cloumn-name-for-projected-fields-in-group-by-query.html)
  - [New Features in Ruby 2.4](https://blog.blockscore.com/new-features-in-ruby-2-4/)
+ - [Web applications on Phusion Passenger are not vulnerable to HTTPoxy](https://blog.phusion.nl/2016/07/21/web-applications-on-phusion-passenger-are-not-vulnerable-to-httpoxy/)
  - [Python and Ruby implementations compared by the error density](http://www.viva64.com/en/b/0414/) ([русский перевод](https://habrahabr.ru/company/pvs-studio/blog/306204/))
+ - [Consider Turbolinks 5 for your next Rails project](http://aspiringwebdev.com/consider-turbolinks-5-for-your-next-rails-project/)
+ - [Ruby Web Dev The Other Way](http://rwdtow.stdout.in/)
+ - [Isolate Side Effects – Functional Style in Ruby](http://www.rubypigeon.com/posts/isolate-side-effects-functional-style-in-ruby/)
+ - [Stack Overflow Documentation](http://stackoverflow.com/tour/documentation)
+ - [AutoReloader - a lightweight code reloader intended to be used specially in development mode of server applications](https://github.com/rosenfeld/auto_reloader)
+ - [Rack Web Console - a simple Rack app class that allows one to run arbitrary Ruby code on a given binding](https://github.com/rosenfeld/rack_web_console)
 
 ## JavaScript
 
-
+ - [Opera browser sold to a Chinese consortium for $600 million](https://www.engadget.com/2016/07/18/opera-browser-sold-to-a-chinese-consortium-for-600-million/)
  - [Building Serverless Apps with AWS Lambda](https://auth0.com/blog/2016/07/19/building-serverless-apps-with-aws-lambda/)
+ - [Web scraping with Nightmare.js](https://azurelogic.com/posts/web-scraping-with-nightmare-js/)
+ - [Why object literals in JavaScript are cool](https://rainsoft.io/why-object-literals-in-javascript-are-cool/)
+ - [D4 - Declarative Data-Driven Documents](https://d4.js.org/)
+ - [Jets.js - native CSS search engine](https://jets.js.org/)
+ - [Dio is a lightweight (~6kb) Virtual DOM framework](http://thysultan.com/dio/)
  - [Gatsby – a Static Site Generator for React](https://github.com/gatsbyjs/gatsby)
+ - [Maggie - returns information about the image selected in a html input file](https://github.com/zzarcon/maggie)
 
 
 
