--- a/source/posts/2016/08-09-podcast-04-30.html.md
+++ b/source/posts/2016/08-09-podcast-04-30.html.md
@@ -1,5 +1,5 @@
 ---
-title: "30 выпуск 04 сезона.  и прочее"
+title: "30 выпуск 04 сезона. Rake gem explained, Advanced SQL in Rails, React Server, React Monocle, Bulma, EQCSS и прочее"
 date: 2016-08-09
 tags:
  - podcasts
@@ -16,12 +16,13 @@ main_image: "/images/static/04/0430.png"
 
 ## Ruby
 
-
+ - [Using Rails 5 ActionCable and RethinkDB to build a Reactive WebSocket App](https://blog.phusion.nl/2016/08/04/using-rails-5-actioncable-and-rethinkdb-to-build-a-reactive-websocket-app/), [Rake gem explained](https://medium.com/@rudyyazdi/rake-gem-explained-ebee7e6e6f72) и [The Pros and Cons of Ruby Refinements](https://blog.codeship.com/ruby-refinements/)
+ - [Advanced SQL in Rails - Part 1](http://brewhouse.io/2016/08/04/sql-in-rails.html), [3 ways to work with time in Postgres (& ActiveRecord)](http://ducktypelabs.com/3-ways-to-work-with-time-in-postgres-and-ar/) и [An Introduction to Crystal: Fast as C, Slick as Ruby](https://blog.codeship.com/an-introduction-to-crystal-fast-as-c-slick-as-ruby/)
 
 ## JavaScript
 
- - [React Server - React framework with server render for blazing fast page load and seamless transitions between pages in the browser](https://react-server.io/)
- - [Create React apps with no build configuration](https://github.com/facebookincubator/create-react-app)
+ - [React Fiber Architecture](https://github.com/acdlite/react-fiber-architecture), [React Server - React framework with server render for blazing fast page load and seamless transitions between pages in the browser](https://react-server.io/), [Create React apps with no build configuration](https://github.com/facebookincubator/create-react-app) и [React Monocle is a developer tool for generating visual representations of your React app's component hierarchy](https://github.com/team-gryff/react-monocle)
+ - [The for Loop vs. forEach in JavaScript](http://thejsguy.com/2016/07/30/javascript-for-loop-vs-array-foreach.html), [This Image is Also an HTML Webpage](https://dev.to/ben/this-image-is-also-an-html-webpage), [Bulma - a modern CSS framework based on Flexbox](http://bulma.io/) и [EQCSS - a CSS Extension for Element Queries & More](http://elementqueries.com/)
 
 READMORE
 
