--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -16,7 +16,7 @@ main_image: "/images/static/04/0431.png"
 
 ## Ruby
 
-
+ - [Tips for Fixing Open Source bugs](http://www.schneems.com/2016/08/03/supporing-open-source.html)
 
 ## JavaScript
 
