--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -16,7 +16,14 @@ main_image: "/images/static/04/0431.png"
 
 ## Ruby
 
+ - [Ruby Returns Incorrect Integer Or Decimal Places When Dividing Two Numbers](https://solidfoundationwebdev.com/blog/posts/ruby-returns-incorrect-integer-or-decimal-places-when-dividing-two-numbers)
+ - [How to Test Rails Models with Minitest](https://semaphoreci.com/community/tutorials/how-to-test-rails-models-with-minitest)
  - [Tips for Fixing Open Source bugs](http://www.schneems.com/2016/08/03/supporing-open-source.html)
+ - [Build Your Own Web Server](http://www.blackbytes.info/2016/08/build-your-own-web-server/)
+ - [Bundling Dependencies Inside Ruby Gems](http://blog.presidentbeef.com/blog/2016/08/09/bundling-gem-dependencies-inside-ruby-gems/)
+ - [Of an ancient Rails plugin](http://zzak.io/log/2016-08-09-of-an-ancient-rails-plugin.html)
+ - [Continuous Security for Rails apps with Pipeline and Brakeman](https://jenkins.io/blog/2016/08/10/rails-cd-with-pipeline/)
+ - [Doctor : An Open Source Documentation Server](https://blog.minio.io/doctor-an-open-source-documentation-server-41d86d756f15)
 
 ## JavaScript
 
