--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -27,6 +27,8 @@ main_image: "/images/static/04/0431.png"
 
 ## JavaScript
 
+ - [Ricardo Forth: A Forth in C, JS, WebAssembly and Asmjs](https://marianoguerra.github.io/ricardo-forth/)
+ - [NX is a next generation client side framework](http://nx-framework.com/)
  - [Fuse.js - lightweight fuzzy-search library](http://fusejs.io/)
 
 READMORE
