--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -16,6 +16,7 @@ main_image: "/images/static/04/0431.png"
 
 ## Ruby
 
+ - [Using State Machines to run Databases](https://www.citusdata.com/blog/2016/08/12/state-machines-to-run-databases/)
  - [Ruby Returns Incorrect Integer Or Decimal Places When Dividing Two Numbers](https://solidfoundationwebdev.com/blog/posts/ruby-returns-incorrect-integer-or-decimal-places-when-dividing-two-numbers)
  - [How to Test Rails Models with Minitest](https://semaphoreci.com/community/tutorials/how-to-test-rails-models-with-minitest)
  - [Tips for Fixing Open Source bugs](http://www.schneems.com/2016/08/03/supporing-open-source.html)
@@ -24,12 +25,17 @@ main_image: "/images/static/04/0431.png"
  - [Of an ancient Rails plugin](http://zzak.io/log/2016-08-09-of-an-ancient-rails-plugin.html)
  - [Continuous Security for Rails apps with Pipeline and Brakeman](https://jenkins.io/blog/2016/08/10/rails-cd-with-pipeline/)
  - [Doctor : An Open Source Documentation Server](https://blog.minio.io/doctor-an-open-source-documentation-server-41d86d756f15)
+ - [Advanced SQL in Rails - Part 2](http://brewhouse.io/2016/08/12/sql-in-rails-part2.html)
+ - [Phoenix Channels vs Rails Action Cable](https://dockyard.com/blog/2016/08/09/phoenix-channels-vs-rails-action-cable)
 
 ## JavaScript
 
  - [Ricardo Forth: A Forth in C, JS, WebAssembly and Asmjs](https://marianoguerra.github.io/ricardo-forth/)
  - [NX is a next generation client side framework](http://nx-framework.com/)
  - [Fuse.js - lightweight fuzzy-search library](http://fusejs.io/)
+ - [Pizzicato aims to simplify the way you create and manipulate sounds via the Web Audio API](https://alemangui.github.io/pizzicato/)
+ - [Toolgif - a very simple Jquery gif tooltip plugin](https://mburakerman.github.io/toolgif/)
+
 
 READMORE
 
