--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -16,6 +16,7 @@ main_image: "/images/static/04/0431.png"
 
 ## Ruby
 
+ - [Rails 5.0.0.1, 4.2.7.1, and 3.2.22.3 have been released!](http://weblog.rubyonrails.org/2016/8/11/Rails-5-0-0-1-4-2-7-2-and-3-2-22-3-have-been-released/)
  - [Using State Machines to run Databases](https://www.citusdata.com/blog/2016/08/12/state-machines-to-run-databases/)
  - [Ruby Returns Incorrect Integer Or Decimal Places When Dividing Two Numbers](https://solidfoundationwebdev.com/blog/posts/ruby-returns-incorrect-integer-or-decimal-places-when-dividing-two-numbers)
  - [How to Test Rails Models with Minitest](https://semaphoreci.com/community/tutorials/how-to-test-rails-models-with-minitest)
